--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
 table {
   margin: 0 auto;
   border-spacing: 0;
@@ -7,8 +15,11 @@ table {
 td {
   border-bottom: 1px solid black;
   padding: 4px 8px;
+  text-align: center;
 }
 
 th {
+  border-bottom: 1px solid black;
+  padding: 4px 8px;
   background-color: #dddddd;
 }
