--- a/style.css
+++ b/style.css
@@ -1,17 +1,79 @@
-.alt-h1 {
+header, section, footer, nav, aside {
+  display: block;
+}
+
+body {
+  background-color: #ffdacc;
+  font-family: 'Palatino', serif;
+}
+
+footer {
+  text-align: center;
+}
+
+nav ul {
+  width: 40%;
+  text-align: center;
+  margin: auto;
+  background-color: #ff9966;
+}
+
+nav li {
+  display: inline;
+  list-style-type: none;
+  color: white;
   font-size: 20px;
+  font-weight: bold;
+  margin-right: 40px;
+  padding: 0;
+}
+
+.image1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 450px;
+  height: 150px;
+}
+
+#title {
+  text-align: center;
+  color: black;
+}
+
+.alt-h1 {
+  font-size: 25px;
   color: black;
 }
 
 h1 {
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
+  color: #ff5050;
 }
 
 h2 {
-  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  color: #808080;
 }
 
-table {
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  color: #6666ff;
+}
+
+div ul {
+  text-align: center;
+  padding: 2px 2px 10px 2px;
+  border: 5px dotted white;
+  border-radius: 20px;
+}
+
+ul li:last-child {
+  font-weight: bold;
+  
+/*table {
   margin: 0 auto;
   border-spacing: 0;
   border-collapse: separate;
@@ -29,6 +91,4 @@ th {
   background-color: #dddddd;
 }
 
-ul li:last-child {
-  font-weight: bold;
-}
+}*/
