--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav ul li:hover {
   color: #808080;
 }
 
-.image1 {
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -94,4 +94,14 @@ th {
   border-bottom: 1px solid black;
   padding: 4px 8px;
   background-color: #dddddd;
+}
+
+input[type=text] {
+      width: 60%;
+      box-sizing: border-box;
+  }
+
+fieldset {
+  width: 30%;
+  text-align: left;
 }
